tests/paczka1/fuzzy1/50374984.err
Error in line 10: ocbxSK S825 6,0
Error in line 4: s3xsn126pO S270 21,4
Error in line 26: s3xsn126pO S726 22,0
Error in line 33: OhW S726 70,9
Error in line 25: dwC1KGzH9 S726 2,3
